# rs-axum-api-template

./: Cargo.toml  README.md  clippy.toml  rustfmt.toml
src/: main.rs
src/common/: mod.rs
src/common/api_response/: mod.rs
src/common/errors/: mod.rs
src/config/: env_settings.rs  mod.rs
src/constants/: http.rs
src/domains/: mod.rs
src/domains/authentication/: mod.rs
src/domains/health/: mod.rs
src/infrastructures/: mod.rs
src/infrastructures/cache/: local_cache.rs
src/infrastructures/database/: mod.rs
src/infrastructures/log/: logger.rs
src/infrastructures/otel/: tracer.rs
src/middlewares/: mod.rs  not_found_mw.rs  recovery_mw.rs  request_context.rs  request_id_mw.rs  request_logging_mw.rs  timeout_mw.rs
src/services/v1/: mod.rs
src/services/v1/authentication/: mod.rs
src/services/v1/healthcheck/: mod.rs
src/web/api/: app_registry.rs  app_state.rs  mod.rs  router.rs
src/web/api/v1/: mod.rs
src/web/api/v1/authentication/: mod.rs
src/web/api/v1/healthcheck/: mod.rs
