[package]
name = "rs-axum-api-template"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 0
incremental = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dependencies]
anyhow = "1.0.99"
axum = {  version = "0.8.4", features = ["tokio"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = {  version = "1.47.1", features = ["full"] }
http = "1.3.1"
chrono = "0.4.41"
uuid = {  version = "1.18.0", features = ["v4"] }
tower-layer = "0.3.3"
tower-service = "0.3.3"
futures-util = "0.3.31"
once_cell = "1.21.3"
mime_guess = "2.0.5"
config = "0.15.14"
dotenvy = "0.15.7"
tower = "0.5.2"
tracing = "0.1.41"
ecs-logger = "1.1.0"
log = "0.4.27"
env_logger = "0.11.8"
opentelemetry = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
opentelemetry_sdk = "0.30.0"
opentelemetry-semantic-conventions = "0.30.0"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = "0.3.19"
tower-http = {  version = "0.6.6", features = ["cors"] }
async-trait = "0.1.89"
openidconnect = { version = "4.0.1", default-features = false, features = ["reqwest", "native-tls"] }
moka = { version = "0.12.10", features = ["future"] }
dashmap = "6.1.0"
bb8 = "0.9.0"
diesel = { version = "2.2.12", features = ["postgres"] }
diesel-async = { version = "0.6.1", features = ["postgres", "tokio", "pool", "bb8"] }
serial_test = "3.2.0"

